--- a/index.html
+++ b/index.html
@@ -6,5 +6,12 @@
     <title>Weather App - HTML, CSS, JS</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="card">
+      <div class="search">
+        <input type="text" placeholder="Enter city name" spellcheck="false" />
+        <button><img src="images/search.png" /></button>
+      </div>
+    </div>
+  </body>
 </html>
