--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <div class="col">
             <img src="images/wind.png" />
             <div>
-              <p class="wind">15km/h</p>
+              <p class="wind">15mp/h</p>
               <p>Wind Speed</p>
             </div>
           </div>
